Removed the use of a bug fix for problematic equations in the answer key, which was itself causing issue #905. If vertical alignment of equations becomes a problem this will have to be reapplied, and equations cannot be inline.

--- a/css/ccap-chemistry.css
+++ b/css/ccap-chemistry.css
@@ -5322,13 +5322,6 @@ div.colophon.end-of-book-solutions .chapter-area div.solution > div.body div spa
 div.book > div.appendix > div.section div.equation > *:last-child::after {
   display: none;
 }
-div.colophon.end-of-book-solutions div.solution .cnx-svg::before {
-  content: "\A";
-  white-space: pre;
-}
-.end-of-book-solutions .solution .cnx-svg {
-  vertical-align: 0 !important;
-}
 /* -------------------------
  * Equations
  * -------------------------
